--- a/index.html
+++ b/index.html
@@ -7,36 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="toggleTheme">White Mode</button>
     <div class="container">
-        <input type="text" id="display" placeholder="0">
+        <input type="text" id="display" placeholder="0" readonly>
         <div class="numberButton">
-            
             <button class="btn" data-value="AC">AC</button>                      
             <button class="btn" data-value="DEL">DEL</button>                      
             <button class="btn" data-value="%">%</button>                      
             <button class="btn" data-value="/">/</button>
-
             <button class="btn" data-value="7">7</button>                      
             <button class="btn" data-value="8">8</button>                      
             <button class="btn" data-value="9">9</button>                      
             <button class="btn" data-value="*">*</button>
-
             <button class="btn" data-value="4">4</button>
             <button class="btn" data-value="5">5</button>
             <button class="btn" data-value="6">6</button>
             <button class="btn" data-value="-">-</button>
-
             <button class="btn" data-value="1">1</button>
             <button class="btn" data-value="2">2</button>
             <button class="btn" data-value="3">3</button>
             <button class="btn" data-value="+">+</button>
-
             <button class="btn" data-value="0">0</button>
             <button class="btn" data-value="00">00</button>
             <button class="btn" data-value=".">.</button>
             <button class="btn" data-value="=">=</button>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
-<script src="./main.js"></script>
 </html>
